--- a/Operators.ipynb
+++ b/Operators.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Operators and Loops\n",
+    "## Operators\n",
     "---"
    ]
   },
